--- a/planning/src/gui/mainwindow.ui
+++ b/planning/src/gui/mainwindow.ui
@@ -69,6 +69,11 @@
    </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionOpenMap">
+   <property name="text">
+    <string>OpenMap</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
