added cmake config for vtk

--- a/pc/gui/mainwindow.ui
+++ b/pc/gui/mainwindow.ui
@@ -76,7 +76,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab2DScene">
        <attribute name="title">
@@ -88,6 +88,7 @@
        <attribute name="title">
         <string>3D Scene</string>
        </attribute>
+       <layout class="QGridLayout" name="gridLayout_3"/>
       </widget>
      </widget>
     </item>
