--- a/pc/gui/src/mainwindow.ui
+++ b/pc/gui/src/mainwindow.ui
@@ -11,10 +11,35 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>QuadNav GUI</string>
+   <string>SRCL GUI</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="1">
+     <widget class="QTabWidget" name="tabWidget">
+      <property name="tabPosition">
+       <enum>QTabWidget::North</enum>
+      </property>
+      <property name="tabShape">
+       <enum>QTabWidget::Rounded</enum>
+      </property>
+      <property name="currentIndex">
+       <number>1</number>
+      </property>
+      <widget class="QWidget" name="tab2DScene">
+       <attribute name="title">
+        <string>2D Scene</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout_4"/>
+      </widget>
+      <widget class="QWidget" name="tab3DScene">
+       <attribute name="title">
+        <string>3D Scene</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout_3"/>
+      </widget>
+     </widget>
+    </item>
     <item row="0" column="0">
      <widget class="QGroupBox" name="gbWSpace">
       <property name="maximumSize">
@@ -64,32 +89,20 @@
          </property>
         </widget>
        </item>
+       <item row="5" column="0">
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
       </layout>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QTabWidget" name="tabWidget">
-      <property name="tabPosition">
-       <enum>QTabWidget::North</enum>
-      </property>
-      <property name="tabShape">
-       <enum>QTabWidget::Rounded</enum>
-      </property>
-      <property name="currentIndex">
-       <number>1</number>
-      </property>
-      <widget class="QWidget" name="tab2DScene">
-       <attribute name="title">
-        <string>2D Scene</string>
-       </attribute>
-       <layout class="QGridLayout" name="gridLayout_4"/>
-      </widget>
-      <widget class="QWidget" name="tab3DScene">
-       <attribute name="title">
-        <string>3D Scene</string>
-       </attribute>
-       <layout class="QGridLayout" name="gridLayout_3"/>
-      </widget>
      </widget>
     </item>
    </layout>
