--- a/pc/gui/src/icon_res.qrc
+++ b/pc/gui/src/icon_res.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/icons">
         <file>icons/open_map.ico</file>
+        <file>icons/reset_cam.ico</file>
+        <file>icons/full_view.ico</file>
     </qresource>
 </RCC>
