--- a/pc/gui/src/icon_res.qrc
+++ b/pc/gui/src/icon_res.qrc
@@ -3,5 +3,6 @@
         <file>icons/open_map.ico</file>
         <file>icons/reset_cam.ico</file>
         <file>icons/full_view.ico</file>
+        <file>icons/open_octomap.ico</file>
     </qresource>
 </RCC>
