--- a/pc/visualization/src/mainwindow.ui
+++ b/pc/visualization/src/mainwindow.ui
@@ -75,7 +75,7 @@
        <item row="3" column="2">
         <widget class="QSpinBox" name="sbQTreeMaxDepth"/>
        </item>
-       <item row="6" column="0">
+       <item row="7" column="0">
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -88,7 +88,7 @@
          </property>
         </spacer>
        </item>
-       <item row="5" column="0" colspan="3">
+       <item row="6" column="0" colspan="3">
         <widget class="QPushButton" name="btnSendTraj">
          <property name="text">
           <string>Send Trajectory</string>
@@ -102,10 +102,17 @@
          </property>
         </widget>
        </item>
-       <item row="4" column="0" colspan="3">
+       <item row="5" column="0" colspan="3">
         <widget class="QPushButton" name="pushButton">
          <property name="text">
           <string>Save Map</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0" colspan="3">
+        <widget class="QCheckBox" name="cbShowPadding">
+         <property name="text">
+          <string>Show Padding</string>
          </property>
         </widget>
        </item>
