--- a/pc/visualization/src/mainwindow.ui
+++ b/pc/visualization/src/mainwindow.ui
@@ -103,7 +103,7 @@
         </widget>
        </item>
        <item row="5" column="0" colspan="3">
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QPushButton" name="btnSaveMap">
          <property name="text">
           <string>Save Map</string>
          </property>
