--- a/pc/visualization/src/mainwindow.ui
+++ b/pc/visualization/src/mainwindow.ui
@@ -52,7 +52,31 @@
        <string>Map</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
-       <item row="1" column="0" colspan="3">
+       <item row="7" column="0" colspan="3">
+        <widget class="Line" name="line">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="0" colspan="3">
+        <widget class="QRadioButton" name="rbRemotePlanner">
+         <property name="text">
+          <string>Remote Planner</string>
+         </property>
+         <attribute name="buttonGroup">
+          <string notr="true">rbGroupSelectPlanner</string>
+         </attribute>
+        </widget>
+       </item>
+       <item row="11" column="0" colspan="3">
+        <widget class="QCheckBox" name="cbAutoUpdatePos">
+         <property name="text">
+          <string>Auto Update Postion</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0" colspan="3">
         <widget class="QRadioButton" name="rbUseQTree">
          <property name="text">
           <string>Quad-Tree</string>
@@ -72,10 +96,10 @@
          </attribute>
         </widget>
        </item>
-       <item row="3" column="2">
+       <item row="4" column="2">
         <widget class="QSpinBox" name="sbQTreeMaxDepth"/>
        </item>
-       <item row="7" column="0">
+       <item row="13" column="0">
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -88,14 +112,14 @@
          </property>
         </spacer>
        </item>
-       <item row="6" column="0" colspan="3">
+       <item row="12" column="0" colspan="3">
         <widget class="QPushButton" name="btnSendTraj">
          <property name="text">
           <string>Send Trajectory</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
+       <item row="4" column="0">
         <widget class="QLabel" name="lbQTreeMaxDepth">
          <property name="text">
           <string>Max Depth:</string>
@@ -103,18 +127,38 @@
         </widget>
        </item>
        <item row="5" column="0" colspan="3">
+        <widget class="QCheckBox" name="cbShowPadding">
+         <property name="text">
+          <string>Show Padding</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0" colspan="3">
         <widget class="QPushButton" name="btnSaveMap">
          <property name="text">
           <string>Save Map</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="0" colspan="3">
-        <widget class="QCheckBox" name="cbShowPadding">
+       <item row="8" column="0" colspan="3">
+        <widget class="QRadioButton" name="rbLocalPlanner">
          <property name="text">
-          <string>Show Padding</string>
+          <string>Local Planner</string>
+         </property>
+         <attribute name="buttonGroup">
+          <string notr="true">rbGroupSelectPlanner</string>
+         </attribute>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="lbSGridCellSize">
+         <property name="text">
+          <string>Cell Size:</string>
          </property>
         </widget>
+       </item>
+       <item row="1" column="2">
+        <widget class="QSpinBox" name="sbSGridCellSize"/>
        </item>
       </layout>
      </widget>
@@ -204,5 +248,6 @@
  <connections/>
  <buttongroups>
   <buttongroup name="rbGroupCellDecomp"/>
+  <buttongroup name="rbGroupSelectPlanner"/>
  </buttongroups>
 </ui>
